--- a/css/site.css
+++ b/css/site.css
@@ -71,7 +71,7 @@ header button{
     color: white;
     font-family: 'Podkova', serif;
     text-align: center;
-    padding: 12px 16px;
+    padding: 10px 14px;
     text-decoration: none;
     display: block;
 }
@@ -96,6 +96,10 @@ header button{
 }
 
 header .icons{
+    float: right;
+}
+
+.small-icons{
     float: right;
 }
 
